# ScriptAI

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  cli.py  logging.json  logs_result.json  model_adapters.py  monitoring.py  pyproject.toml  requirements.txt  security.py  setup.py  vercel.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.scriptai_sessions/: session-20251017-223801-2568-768c0ebe-58d2-4da5-b9b1-17d09d7e3736.jsonl  session-20251017-223915-27884-6d55900b-ceee-4942-9296-e95d6cd3fede.jsonl
.zencoder/rules/: repo.md
api/: [...path].py  index.py
docs/: errors.md  plugins.md
examples/: data_processing.py  docker-compose.yml  react_component.jsx
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: model-switch.spec.ts  prompt-validation.spec.ts  rate-limit.spec.ts  smoke.spec.ts
frontend/playwright-report/: index.html
frontend/public/: modelCards.json
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/components/: CodeGenerator.tsx  Footer.tsx  Generator.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  MetricsPanel.tsx  ModelComparison.tsx  ModelManager.tsx  SessionAnalytics.tsx
frontend/src/components/ui/: button.tsx  select.tsx  tabs.tsx
frontend/src/config/: iconMap.ts
plugins/: hello_world_adapter.py
scriptai/: __init__.py  config.py  sessions.py
scriptai/monitoring/: __init__.py  prometheus.py
scriptai/web/: __init__.py  app.py  auth.py  limiter.py
scriptai/web/routes/: analytics.py  metrics.py  models.py  spa.py
scriptai/web/services/: context.py  registry.py
static/css/: style.css
static/figmalol/: App (1).tsx  index.html  modelCards.json
static/figmalol/assets/: index-0gbpQa6u.js  index-63pkh4qm.js  index-Ahc_l-dJ.js  index-AjTeKXFc.js  index-BItSzyeZ.css  index-Ba_-WOma.css  index-Bk3CzUyf.js  index-BvJh0i_I.js  index-ByXm957E.css  index-BztCU2zx.js  index-C9fAH0BI.css  index-CJnGWSIc.css  index-CLhYihhj.css  index-D61vGXjL.css  index-DQgpk7Hv.js  index-Da610bpv.css  index-Dve7YhnB.js  index-HlXaj5ht.js  index-SFBM5dZG.js  prism-csharp-z9M39oVX.js  prism-java-Be7bMlMm.js  prism-python-DUVzs2KN.js  prism-rust-B964bebi.js  prism-typescript-Bx8I1ACt.js
static/figmalol/components_extracted/: CodeGenerator.tsx  DualInterface.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx
static/js/: script.js
templates/: index.html
tests/: test_adapters.py  test_app.py  test_cli.py
